# api/gem/internal/gen/types.gen.go
@@ -3,6 +3,22 @@
 // Code generated by github.com/deepmap/oapi-codegen version v1.16.3 DO NOT EDIT.
 package gen
 
+const (
+	BearerAuthScopes = "bearerAuth.Scopes"
+)
+
+// Balance defines model for Balance.
+type Balance struct {
+	// All 保有している全ての通貨の残高
+	All uint32 `json:"all"`
+
+	// Free 保有している無償通貨の残高
+	Free uint32 `json:"free"`
+
+	// Paid 保有している有償通貨の残高
+	Paid uint32 `json:"paid"`
+}
+
 // HealthCheck HealthCheckのレスポンス
 type HealthCheck struct {
 	// Message メッセージ。通常はok
